fix(workflows): include Package.swift in documentation workflow triggers

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -3,6 +3,7 @@ on:
   push:
     branches: ["main"]
     paths:
+      - "Package.swift"
       - "Sources/**/*.swift"
       - ".github/workflows/documentation.yaml"
 
