docs: improve main tutorial

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -38,6 +38,7 @@ jobs:
             --hosting-base-path QuickActionsKit \
             --output-path docs;
 
+          echo "<script>window.location.href += \"/documentation/quickactionskit\"</script>" > docs/index.html;
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
