build(workflows): include .docc files in documentation workflow triggers

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -5,6 +5,7 @@ on:
     paths:
       - "Package.swift"
       - "Sources/**/*.swift"
+      - "Sources/**/*.docc/**"
       - ".github/workflows/documentation.yaml"
 
 permissions:
